# discord-bot

./: Dockerfile  fly.toml  pyproject.toml
.github/workflows/: fly.yml
discord_bot/: bot.py
discord_bot/fornite/: __init__.py
discord_bot/fortnite/: __init__.py
